--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ plugins:
   - awesome-pages
 theme:
   name: material
+  custom_dir: custom_theme/
   palette:
     scheme: slate
     primary: indigo
